--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>database-table-icon-10.jpg">
     <link href="https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-       
-    <title>jsontreetable</title>
+    <title>jsontreetable_ts</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but jsontreetable doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but jsontreetable_ts doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
