--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>database-table-icon-10.jpg">
     <link href="https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>jsontreetable</title>
+    <title>TreedocViewer</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but jsontreetable doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but TreedocViewer doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected --> 
