--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but TreedocViewer doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>
+        Treedoc Viewer is a feature-rich viewer for tree-like documents such as JSON/JSONex/TextProto, YAML and XML. it provides source, tree and table view and flexible node navigation.<br>
+        Javascript is needed to run.
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected --> 
