--- a/sample/embedded.html
+++ b/sample/embedded.html
@@ -1,15 +1,15 @@
 <html>
   <body>
-    <a href="http://localhost:8080?embeddedId=jtt_2" target="_blank">Open in a new windows</a> | 
+    <a href="http://localhost:8080?embeddedId=tdv_2" target="_blank">Open in a new windows</a> | 
     <a href="http://localhost:8080?dataUrl=https://raw.githubusercontent.com/eBay/jsonex/master/pom.xml" target="_blank">Open in a new windows with dataUrl</a> |
     <a href="http://localhost:8080?data={number:1, string:str}" target="_blank">Open in a new windows with Data</a>
-    <iframe id='jttFrame' src="http://localhost:8080?embeddedId=jtt_1&title=Treedoc Embedded" width="100%" height="100%"></iframe>
+    <iframe id='tdvFrame' src="http://localhost:8080?embeddedId=tdv_1&title=Treedoc Embedded" width="100%" height="100%"></iframe>
   </body>
   <script>
-    const frame = document.getElementById('jttFrame').contentWindow;
+    const frame = document.getElementById('tdvFrame').contentWindow;
     
     function setJttData(target, data) {
-      target.postMessage({type:'jtt-setData', data}, '*');
+      target.postMessage({type:'tdv-setData', data}, '*');
     }
     
     // Set data after a delay
@@ -17,7 +17,7 @@
 
     // Or set data after get ready signal
     window.addEventListener('message', (evt) => {
-      if (evt.data.type !== 'jtt-ready')
+      if (evt.data.type !== 'tdv-ready')
         return;
       console.log(evt);
       // setJttData(frame, {message:"after ready"});  // Both ways work
