--- a/sample/embedded.html
+++ b/sample/embedded.html
@@ -2,7 +2,7 @@
   <body>
     <a href="https://www.treedoc.org?embeddedId=tdv_2" target="_blank">Open in a new windows</a> | 
     <a href="https://www.treedoc.org?dataUrl=https://raw.githubusercontent.com/eBay/jsonex/master/pom.xml" target="_blank">Open in a new windows with dataUrl</a> |
-    <a href="https://www.treedoc.org?data={number:1, string:str}" target="_blank">Open in a new windows with Data</a>
+    <a href="https://www.treedoc.org?data={number:1, string:str}" target="_blank">Open in a new windows with Data on URL (avoid pass confidential data)</a>
     <iframe id='tdvFrame' src="https://www.treedoc.org?embeddedId=tdv_1&title=Treedoc Embedded" width="100%" height="100%"></iframe>
   </body>
   <script>
