support Lombok.toString()

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <noscript>
       <strong>
-        Treedoc Viewer is a feature-rich viewer for tree-like documents such as JSON/JSONex/TextProto, YAML and XML. it provides source, tree and table view and flexible node navigation.<br>
+        Treedoc Viewer is a feature-rich viewer for tree-like documents such as JSON, JSONex, TextProto, YAML, XML and Prometheus. it provides source, tree and table view and flexible node navigation.<br>
         Javascript is needed to run.
       </strong>
     </noscript>
